[project]
name = "ee551-assignments"
version = "0.1.0"
description = "Assignments repo for EE551 Embedded Image Processing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "scikit-image>=0.25.2",
    "scipy>=1.16.2",
]

[dependency-groups]
dev = []
